--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,6 @@
   <script src="javascript/app.js"></script>
 </head>
 <body>
-  <p>Check the console logs</p>
+  <p>Check your console</p>
 </body>
 </html>
