support inline modules

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
   <script src="components/traceur/traceur.min.js"></script>
   <script src="javascript/app.js"></script>
+  <script src="javascript/main.js"></script>
 </head>
 <body>
   <p>Check your console</p>
